--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: "3.10.0-rc.2"
+        env:
+          PIP_DISABLE_PIP_VERSION_CHECK: 1
 
       - name: Run
         run: |
