--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -16,16 +16,20 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: "3.10.0-rc.2"
+        env:
+          PIP_DISABLE_PIP_VERSION_CHECK: 1
 
       - name: Run
         run: |
           make install
           MY_GITHUB_TOKEN=${{ secrets.MY_GITHUB_TOKEN }} make staging
+          export LOG_FILENAME="$( ls log*.txt --format single-column | head -n 1)"
+          echo "LOG_FILENAME=$LOG_FILENAME" >> $GITHUB_ENV
 
       - name: Upload log artifacts
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: log
+          name: ${{ env.LOG_FILENAME }}
           path: |
-            log*.txt
+            ${{ env.LOG_FILENAME }}
