--- a/page/package.json
+++ b/page/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.2",
     "react-lazy-load-image-component": "^1.5.1",
     "react-scripts": "4.0.0",
+    "react-spring": "^9.4.3",
     "swr": "1.0.0"
   },
   "devDependencies": {
