--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       - uses: actions/setup-python@v2
         with:
-          python-version: "3.10.0-rc.2"
+          python-version: "3.10.0"
         env:
           PIP_DISABLE_PIP_VERSION_CHECK: 1
 
