--- a/page/package.json
+++ b/page/package.json
@@ -12,6 +12,7 @@
     "@octokit/rest": "18.12.0",
     "@types/react": "17.0.20",
     "@types/react-dom": ">=16.8.0 <18.0.0",
+    "meilisearch": "^0.30.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-lazy-load-image-component": "^1.5.1",
