--- a/page/package.json
+++ b/page/package.json
@@ -6,18 +6,18 @@
   "main": "src/index.js",
   "homepage": "https://yetanothercheer.github.io/Archive",
   "dependencies": {
-    "@fluentui/react": "8.30.3",
+    "@fluentui/react": "^8.106.6",
     "@fluentui/react-theme-provider": "0.18.5",
     "@fluentui/theme": "2.4.0",
     "@octokit/rest": "18.12.0",
     "@types/react": "17.0.20",
-    "@types/react-dom": ">=16.8.0 <18.0.0",
+    "@types/react-dom": "^17.0.19",
     "meilisearch": "^0.30.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-lazy-load-image-component": "^1.5.1",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-scripts": "4.0.0",
-    "react-spring": "^9.4.3",
+    "react-spring": "^9.7.1",
     "swr": "1.0.0"
   },
   "devDependencies": {
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "bash deploy.sh"
